Commit updated clj-run.sh script, although in the end it does the same thing it used to before this commit.