@@ -5,12 +5,14 @@
 
 source ../env.sh
 
-#JVM_MEM_OPTS="-client -Xmx1024m"
-JVM_MEM_OPTS="-server"
+#JVM_OPTS="-client -Xmx1024m"
+JVM_OPTS="-server"
+#JVM_OPTS="-server -XX:+DoEscapeAnalysis -XX:+UseBiasedLocking"
 
 #JMX_MONITORING=-Dcom.sun.management.jmxremote
 
 # Current fastest
 CLJ_PROG=nbody.clj-11.clj
 
-$JAVA $JVM_MEM_OPTS $JMX_MONITORING ${JAVA_PROFILING} -cp ${CLOJURE_CLASSPATH} clojure.main $CLJ_PROG "$@"
+1>&2 echo "$JAVA $JVM_OPTS $JMX_MONITORING ${JAVA_PROFILING} -cp ${CLOJURE_CLASSPATH} clojure.main $CLJ_PROG" "$@"
+           $JAVA $JVM_OPTS $JMX_MONITORING ${JAVA_PROFILING} -cp ${CLOJURE_CLASSPATH} clojure.main $CLJ_PROG "$@"
